# VibeCoding-program-security-check

./: .gitignore  README.md  pyproject.toml  requirements.txt
code_sentry/: __init__.py  cli.py  engine.py
code_sentry/analysis/: __init__.py  ast_nodes.py  ast_parser.py  call_graph.py  chain_detector.py  models.py  taint_tracker.py
code_sentry/analysis/parsers/: __init__.py  python_parser.py  tree_sitter_parser.py
code_sentry/analyzers/: context.py
code_sentry/reporters/: terminal.py
code_sentry/rules/: __init__.py  base.py  poisoning.py  security.py
tests/: test_deep.go  test_deep.js  test_deep.py  test_deep_analysis.py  test_deep_en.js  test_poisoning.py  test_security.py
vscode/: .vscodeignore  install.bat  package-lock.json  package.json
vscode/src/: diagnostics.ts  extension.ts  scanner.ts  treeview.ts
